--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "func": "func --version"
   },
   "private": true,
   "devDependencies": {
@@ -33,10 +34,11 @@
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@swc/helpers": "~0.4.11",
+    "azure-functions-core-tools": "^4.0.4895",
     "tslib": "^2.3.0"
   }
 }
