--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@nx-azure/functions-plugin": ["packages/functions-plugin/src/index.ts"]
+      "@nx-azure/functions": ["packages/functions/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
