--- a/e2e/func-e2e/project.json
+++ b/e2e/func-e2e/project.json
@@ -1,17 +1,17 @@
 {
-  "name": "functions-e2e",
+  "name": "func-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "e2e/functions-e2e/src",
+  "sourceRoot": "e2e/func-e2e/src",
   "targets": {
     "e2e": {
       "executor": "@nrwl/nx-plugin:e2e",
       "options": {
-        "target": "functions:build",
-        "jestConfig": "e2e/functions-e2e/jest.config.ts"
+        "target": "func:build",
+        "jestConfig": "e2e/func-e2e/jest.config.ts"
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["functions"]
+  "implicitDependencies": ["func"]
 }
