--- a/packages/func/package.json
+++ b/packages/func/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-azure/functions",
+  "name": "@nx-azure/func",
   "version": "0.0.1",
   "main": "src/index.js",
   "generators": "./generators.json",
