--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
+    "tsc-files": "^1.1.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
