--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^18.11.19",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
