--- a/packages/func/package.json
+++ b/packages/func/package.json
@@ -2,6 +2,7 @@
   "name": "@nx-azure/func",
   "version": "0.0.1",
   "main": "src/index.js",
+  "access": "public",
   "generators": "./generators.json",
   "executors": "./executors.json"
 }
