--- a/.github/workflows/publish-func.yml
+++ b/.github/workflows/publish-func.yml
@@ -22,6 +22,6 @@ jobs:
       - name: E2E Testing 🧪
         run: npm run e2e:all
       - name: Publish package on NPM 📦
-        run: npm publish dist/packages/func
+        run: npm publish dist/packages/func --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
