--- a/packages/func/package.json
+++ b/packages/func/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@nx-azure/func",
+  "name": "nx-azure-func",
   "version": "0.0.1",
   "main": "src/index.js",
   "access": "public",
+  "repository": "git://https://github.com/AlexPshul/nx-azure.git",
   "generators": "./generators.json",
   "executors": "./executors.json"
 }
