--- a/packages/func/package.json
+++ b/packages/func/package.json
@@ -1,9 +1,14 @@
 {
   "name": "nx-azure-func",
+  "author": "Alex Pshul",
+  "description": "Nx plugin for Azure Functions to initialize, create, build, run and publish Azure Functions inside your NX workspace.",
   "version": "0.0.1",
   "main": "src/index.js",
-  "access": "public",
   "repository": "https://github.com/AlexPshul/nx-azure",
+  "license": "MIT",
   "generators": "./generators.json",
-  "executors": "./executors.json"
+  "executors": "./executors.json",
+  "publishConfig": {
+    "access": "public"
+  }
 }
