--- a/packages/func/package.json
+++ b/packages/func/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nx-azure-func",
+  "name": "@nxazure/func",
   "author": "Alex Pshul",
   "description": "Nx plugin for Azure Functions to initialize, create, build, run and publish Azure Functions inside your NX workspace.",
   "version": "0.0.3",
   "main": "src/index.js",
-  "repository": "https://github.com/AlexPshul/nx-azure",
+  "repository": "https://github.com/AlexPshul/nxazure",
   "license": "MIT",
   "generators": "./generators.json",
   "executors": "./executors.json",
