--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "**/*.ts": ["tsc-files --pretty --noEmit --project tsconfig.base.json", "eslint --fix --max-warnings=0", "prettier -w"]
+  "**/*.ts": ["tsc-files --pretty --noEmit --project tsconfig.base.json", "eslint --fix --max-warnings=0 --no-ignore", "prettier -w"]
 }
