--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@nrwl/cli": "^15.0.0",
-    "@nrwl/devkit": "^15.0.0",
-    "@nrwl/eslint-plugin-nx": "^15.0.0",
-    "@nrwl/jest": "^15.0.0",
-    "@nrwl/js": "^15.0.0",
-    "@nrwl/linter": "^15.0.0",
-    "@nrwl/nx-plugin": "^15.0.0",
-    "@nrwl/workspace": "^15.0.0",
+    "@nrwl/cli": "15.7.1",
+    "@nrwl/devkit": "15.7.1",
+    "@nrwl/eslint-plugin-nx": "15.7.1",
+    "@nrwl/jest": "15.7.1",
+    "@nrwl/js": "15.7.1",
+    "@nrwl/linter": "15.7.1",
+    "@nrwl/nx-plugin": "15.7.1",
+    "@nrwl/workspace": "15.7.1",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
@@ -35,7 +35,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^13.1.0",
-    "nx": "^15.0.0",
+    "nx": "15.7.1",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
@@ -47,3 +47,4 @@
     "tslib": "^2.3.0"
   }
 }
+
