Added auto organize for imports on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "eslint.validate": ["json"]
+  "eslint.validate": ["json"],
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  }
 }
