Changed the azure functions cli installation a bit

--- a/.github/workflows/publish-func.yml
+++ b/.github/workflows/publish-func.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
       - name: Install func CLI 🛠️
-        run: npm install -g azure-functions-core-tools@4
+        run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
       - name: Install dependencies 🛠️
         run: npm ci
       - name: Build project 👷‍♂️🏗️
