--- a/.github/workflows/publish-func.yml
+++ b/.github/workflows/publish-func.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install func CLI 🛠️
         run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
       - name: Check if func is installed
-        run: func --version
+        run: 'func --version'
       - name: Install dependencies 🛠️
         run: npm ci
       - name: Build project 👷‍♂️🏗️
