Added a migration file to remove imports to registerPaths file

--- a/packages/func/package.json
+++ b/packages/func/package.json
@@ -10,5 +10,8 @@
   "executors": "./executors.json",
   "publishConfig": {
     "access": "public"
+  },
+  "nx-migrations": {
+    "migrations": "./migrations.json"
   }
 }
