--- a/.github/workflows/publish-func.yml
+++ b/.github/workflows/publish-func.yml
@@ -1,6 +1,8 @@
-name: Publish to NPM
+name: Full CI/CD
 on:
   push:
+    branches: [master]
+  pull_request:
     branches: [master]
   release:
     types: [created]
