Upgraded packages and npm audit fixes

--- a/packages/func/project.json
+++ b/packages/func/project.json
@@ -38,7 +38,8 @@
             "glob": "migrations.json",
             "output": "."
           }
-        ]
+        ],
+        "updateBuildableProjectDepsInPackageJson": true
       }
     },
     "lint": {
