--- a/e2e/func-e2e/project.json
+++ b/e2e/func-e2e/project.json
@@ -5,11 +5,12 @@
   "sourceRoot": "e2e/func-e2e/src",
   "targets": {
     "e2e": {
-      "executor": "@nx/plugin:e2e",
+      "executor": "@nx/jest:jest",
       "options": {
-        "target": "func:build",
-        "jestConfig": "e2e/func-e2e/jest.config.ts"
-      }
+        "jestConfig": "e2e/func-e2e/jest.config.ts",
+        "runInBand": true
+      },
+      "dependsOn": ["func:build"]
     }
   },
   "tags": [],
