--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@nx/eslint-plugin": "16.6.0",
-    "@nx/jest": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/linter": "16.6.0",
-    "@nx/plugin": "16.6.0",
-    "@nx/workspace": "16.6.0",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/linter": "16.8.1",
+    "@nx/plugin": "16.8.1",
+    "@nx/workspace": "16.8.1",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
@@ -26,7 +26,7 @@
     "@types/node": "^18.11.19",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
-    "eslint": "~8.15.0",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.1.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
@@ -34,7 +34,7 @@
     "jest-environment-jsdom": "29.4.3",
     "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^13.1.0",
-    "nx": "16.6.0",
+    "nx": "16.8.1",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
@@ -42,7 +42,7 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
-    "@nx/devkit": "16.6.0",
+    "@nx/devkit": "16.8.1",
     "@swc/helpers": "0.5.1",
     "glob": "^10.2.2",
     "tree-kill": "^1.2.2",
