Removed the updateBuildableProjectDepsInPackageJson in favour of the new eslint rule and updated package.json

--- a/packages/func/.eslintrc.json
+++ b/packages/func/.eslintrc.json
@@ -20,6 +20,13 @@
       "rules": {
         "@nx/nx-plugin-checks": "error"
       }
+    },
+    {
+      "files": ["*.json"],
+      "parser": "jsonc-eslint-parser",
+      "rules": {
+        "@nx/dependency-checks": "error"
+      }
     }
   ]
 }
