--- a/package.json
+++ b/package.json
@@ -13,39 +13,40 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@nx/devkit": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/jest": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/plugin": "16.8.1",
-    "@nx/workspace": "16.8.1",
-    "@swc-node/register": "^1.4.2",
+    "@nx/devkit": "17.1.2",
+    "@nx/eslint-plugin": "17.1.2",
+    "@nx/jest": "17.1.2",
+    "@nx/js": "17.1.2",
+    "@nx/linter": "17.1.2",
+    "@nx/plugin": "17.1.2",
+    "@nx/workspace": "17.1.2",
+    "@swc-node/register": "1.6.8",
     "@swc/cli": "0.1.62",
-    "@swc/core": "^1.2.173",
+    "@swc/core": "1.3.96",
     "@types/jest": "29.4.0",
     "@types/node": "^18.11.19",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "9.0.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^13.1.0",
-    "nx": "16.8.1",
+    "nx": "17.1.2",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tsc-files": "^1.1.3",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "@swc/helpers": "0.5.1",
+    "@swc/helpers": "0.5.3",
     "glob": "^10.2.2",
     "tree-kill": "^1.2.2",
     "tslib": "^2.3.0"
   }
 }
+
