Updated action flow versions

--- a/.github/workflows/publish-func.yml
+++ b/.github/workflows/publish-func.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18.15'
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
       - name: Install func CLI 🛠️
         run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
