--- a/package.json
+++ b/package.json
@@ -9,43 +9,43 @@
     "test": "nx test",
     "test:all": "nx run-many --target=test --all",
     "e2e:all": "nx run-many --target=e2e --all",
-    "prepare": "is-ci || husky install",
+    "prepare": "is-ci || husky",
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@nx/devkit": "19.3.2",
-    "@nx/eslint-plugin": "19.3.2",
-    "@nx/jest": "19.3.2",
-    "@nx/js": "19.3.2",
-    "@nx/linter": "19.3.2",
-    "@nx/plugin": "19.3.2",
-    "@nx/workspace": "19.3.2",
-    "@swc-node/register": "1.9.2",
-    "@swc/cli": "0.3.14",
-    "@swc/core": "1.5.7",
-    "@types/jest": "29.4.0",
-    "@types/node": "^18.16.9",
-    "@typescript-eslint/eslint-plugin": "7.3.0",
-    "@typescript-eslint/parser": "7.3.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.0.0",
-    "husky": "^8.0.3",
+    "@nx/devkit": "19.8.0",
+    "@nx/eslint-plugin": "19.8.0",
+    "@nx/jest": "19.8.0",
+    "@nx/js": "19.8.0",
+    "@nx/linter": "19.8.0",
+    "@nx/plugin": "19.8.0",
+    "@nx/workspace": "19.8.0",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.7.26",
+    "@types/jest": "29.5.13",
+    "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "8.6.0",
+    "@typescript-eslint/parser": "8.6.0",
+    "eslint": "9.11.0",
+    "eslint-config-prettier": "9.1.0",
+    "husky": "^9.1.6",
     "is-ci": "^3.0.1",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
-    "jsonc-eslint-parser": "^2.1.0",
-    "lint-staged": "^13.1.0",
-    "nx": "19.3.2",
-    "prettier": "^2.6.2",
-    "ts-jest": "29.1.0",
-    "ts-node": "10.9.1",
-    "tsc-files": "^1.1.3",
-    "typescript": "^5.5.2"
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jsonc-eslint-parser": "^2.4.0",
+    "lint-staged": "^15.2.10",
+    "nx": "19.8.0",
+    "prettier": "^3.3.3",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "tsc-files": "^1.1.4",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@swc/helpers": "0.5.11",
-    "glob": "^10.2.2",
+    "@swc/helpers": "0.5.13",
+    "glob": "^11.0.0",
     "tree-kill": "^1.2.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.7.0"
   }
 }
