--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^2.1.1",
-    "@nx/devkit": "19.8.4",
-    "@nx/eslint-plugin": "19.8.4",
-    "@nx/jest": "19.8.4",
-    "@nx/js": "19.8.4",
-    "@nx/linter": "19.8.4",
-    "@nx/plugin": "19.8.4",
-    "@nx/workspace": "19.8.4",
+    "@nx/devkit": "20.0.8",
+    "@nx/eslint": "20.0.8",
+    "@nx/eslint-plugin": "20.0.8",
+    "@nx/jest": "20.0.8",
+    "@nx/js": "20.0.8",
+    "@nx/plugin": "20.0.8",
+    "@nx/workspace": "20.0.8",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.4.0",
     "@swc/core": "1.7.26",
@@ -36,7 +36,7 @@
     "jest-environment-jsdom": "29.7.0",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^15.2.10",
-    "nx": "19.8.4",
+    "nx": "20.0.8",
     "prettier": "^3.3.3",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
